# Support-Ticket-Triage

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_rag_schema.py
backend/app/: __init__.py  init_db.py  main.py  seed.py
backend/app/ai/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  prompts.py
backend/app/api/v1/: __init__.py  analytics.py  auth.py  health.py  knowledge_base.py  teams.py  tickets.py  users.py  webhooks.py  websocket.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  redis.py  security.py
backend/app/middleware/: rate_limiting.py  request_logging.py
backend/app/models/: __init__.py  base.py  knowledge_base.py  notification.py  team.py  ticket.py  user.py
backend/app/repositories/: __init__.py  knowledge_base.py  team.py  ticket.py  user.py
backend/app/schemas/: auth.py  common.py  knowledge_base.py  ticket.py  user.py
backend/app/services/: __init__.py  ai_triage.py  analytics.py  auth.py  langgraph_workflow.py  rag_service.py  realtime.py  ticket.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: notifications.py  triage.py
backend/tests/: conftest.py  test_auth.py  test_tickets.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DeflectionChat.tsx  Layout.tsx
frontend/src/pages/: CreateTicketPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  TicketDetailPage.tsx  TicketsPage.tsx
frontend/src/services/: analytics.ts  api.ts  auth.ts  tickets.ts
frontend/src/stores/: authStore.ts  notificationStore.ts  themeStore.ts
frontend/src/types/: index.ts
infra/: docker-compose.yml
infra/grafana/dashboards/: fastapi.json
infra/grafana/provisioning/datasources/: prometheus.yml
nginx/: nginx.conf
