[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-triage-ai"
version = "1.0.0"
description = "AI-powered support ticket triage and management system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Support Triage AI Team"},
]

dependencies = [
    # ── Web Framework ────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # ── Database ─────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # ── Redis ────────────────────────────────────────────────
    "redis>=5.2.0",
    # ── Auth ─────────────────────────────────────────────────
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    # ── Validation ───────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # ── AI / LLM ─────────────────────────────────────────────
    "openai>=1.55.0",
    "tiktoken>=0.8.0",
    # ── Task Queue ───────────────────────────────────────────
    "celery[redis]>=5.4.0",
    # ── Logging ──────────────────────────────────────────────
    "structlog>=24.4.0",
    # ── HTTP ─────────────────────────────────────────────────
    "httpx>=0.28.0",
    # ── Observability ─────────────────────────────────────────
    "prometheus-fastapi-instrumentator>=7.0.0",
    # ── Utilities ────────────────────────────────────────────
    "python-dateutil>=2.9.0",
    "python-slugify>=8.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-passlib>=1.7.7",
    "types-python-dateutil>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff ─────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ───────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
